--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Crimson Text', serif;
+    color: black;
 }
 
 h1 {
@@ -19,11 +20,18 @@ body {
 }
 
 #container {
-    height: 100px;
+    height: 90vh;
+    width: 100%;
+    position: relative;
 }
 
 #render {
+    display: block;
+    position: absolute;
+    z-index: 0;
     width: 100%;
-    height: 425px;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 1500ms ease-out;
     /* border: 1px solid black; */
 }
